# Permeability-test-v2

./: README.md  app.py  pyproject.toml  requirements.txt
src/epidermal_barrier_screen/: __init__.py  cli.py  descriptors.py  io.py  ionization.py  screen.py
src/epidermal_barrier_screen/adapters/: __init__.py  chembl_adapter.py  common.py  drugbank_adapter.py  pubchem_adapter.py
src/epidermal_barrier_screen/chemistry/: __init__.py  ionization.py  logd.py
src/epidermal_barrier_screen/predictors/: __init__.py  pka_predictor.py  qupkake_adapter.py
src/epidermal_barrier_screen/services/: compound_resolution.py  pka_pipeline.py
tests/: test_fallback_behavior.py  test_logd_ionization.py  test_pka_lookup.py
