[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epidermal-barrier-screen"
version = "0.2.0"
description = "Screen molecules against permeability passage criteria"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "pandas",
  "openpyxl",
  "rdkit",
  "requests",
  "beautifulsoup4",
  "dimorphite_dl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
epidermal-screen = "epidermal_barrier_screen.cli:main"
